<resources>
    <string name="app_name">Bsor3a</string>
    <string name="ChooseLanguage">اختيـار اللغــة</string>
    <string name="ArabicLanguage">اللغــة العـربيـة</string>
    <string name="EnglishLanguage">English</string>
    <string name="hi">Eng</string>
    <string name="Login">LogIn</string>
    <string name="ShortName">Short Name</string>
    <string name="Password">Password</string>
    <string name="DoYouForget">Do you forget</string>
    <string name="YourPassword">Your Password</string>
    <string name="DonhaveAccount">Don\'t hvave Account</string>
    <string name="singup">signup</string>
    <string name="Facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Gmail</string>
    <string name="Register">Register</string>
    <string name="FullName">Full Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="AcceptTerms">Accept Terms</string>
    <string name="PlAcceptTerms">Please Accept Terms</string>
    <string name="google_maps_key">AIzaSyD26stzHf4YNGn15iC8IEjj6-3y3vdM_IE</string>
    <string name="title_activity_main_navigation" translatable="false">MainNavigationActivity</string>
    <string name="facebook_app_id" translatable="false">418072448598793</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb418072448598793</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="RequestClient">Ask a delegate</string>
    <string name="Modify_personal_data">Modify personal data</string>
    <string name="Previous_shipments">Previous shipments</string>
    <string name="Technical_support">Technical support</string>
    <string name="sign_out">Sign out</string>
    <string name="detect_location">detect location</string>
    <string name="Confirm">confirm</string>
    <string name="title_activity_maps">Map</string>
    <string name="ShippingDetalis">Shipping Details</string>
    <string name="ShippingName">Shipping Name</string>
    <string name="Detailedaddress">Detailed address</string>
    <string name="PleaseEnglish">Please write the Sender Data </string>
    <string name="PleaseEnglisha">Please write the Receiver Data </string>
    <string name="Governorate">Governorate</string>
    <string name="District">District</string>
    <string name="street">street</string>
    <string name="Dash">--</string>
    <string name="HouseNumber">Houes Number</string>
    <string name="Storey">Storey</string>
    <string name="Apartmentnumber">Apartment number</string>
    <string name="thecurrentpassword">Enter the current password</string>
    <string name="Cancel">Cancel</string>
    <string name="NotgetLocation">Please Spicfy The location</string>
    <string name="ContactTheCompany">Contact the management company quickly by</string>
    <string name="Thefollowingnumbers">The following numbers</string>
    <string name="OrWithEmail">Or With Email</string>
    <string name="VisitWebsite">Visit our Website</string>
    <string name="more">More</string>
    <string name="more2">more</string>
    <string name="more1">more</string>
    <string name="fackdata">FackData</string>
    <string name="Home">Home</string>
    <string name="RestPassword">Rest Password</string>
    <string name="Continue">Continue</string>
    <string name="EmailOrMobile">Email OR Mobile</string>
    <string name="Distance">Full Distance</string>
    <string name="FullPrice">Full price</string>
    <string name="netPrice">Net Price</string>
    <string name="ShippingCost">Shipping Cost</string>
    <string name="table_layout_4_open" translatable="false">hi</string>
    <string name="Shippinhtype">Shipping Type</string>
    <string name="Date">Date</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Space" translatable="false" />
    <string name="choosePicture">Choose Picture</string>
    <string name="choosePic">take a picture</string>
    <string name="picfromstudio">Photo from the studio</string>
    <string name="cancel">Cancel</string>
    <string name="enterName">Enter Full Name  Here !</string>
    <string name="enterPhone">Enter Phone Here !</string>
    <string name="enterPassword">Enter Password Here !</string>
    <string name="enterEmail">Enter Email Here !</string>
    <string name="enterShortName">Enter Short Name Here !</string>
    <string name="yes">Yes</string>
    <string name="UploadData">Update Data</string>
    <string name="pleasewait">Please wait</string>
    <string name="okay">Okay</string>
    <string name="RemeberMe">Remember me</string>
    <string name="Stateid">state id</string>
    <string name="Statename">state name</string>
    <string name="streetName">street name</string>
    <string name="building_number">building number</string>
    <string name="flower_number">flower number</string>
    <string name="enterstateid" translatable="false">Enter State id !</string>
    <string name="enterstreetname">Enter Street Name !</string>
    <string name="enterbuildingnumber">Enter building number !</string>
    <string name="enterFlowerNumber">Enter Flower Number !</string>
    <string name="enterconfirmation">Enter The Confirmation code !</string>
    <string name="errorcode">The Code is incorrect !</string>
    <string name="enterShipping">Enter Shipping Name !</string>
    <string name="enterGovernorate">enter The Governorate !</string>
    <string name="enterDiscrete">enter the Discrete !</string>
    <string name="enterHouseNumber">enter the house number !</string>
    <string name="enterStorey">enter the story !</string>
    <string name="enterApartmentNumber">enter the ApartmentNumber !</string>
    <string name="goout">Quit</string>
    <string name="dogoout">Do you want to go out !</string>
    <string name="no">No</string>
    <string name="Okay">okay</string>
    <string name="Empty_Field">Empty Field</string>
    <string name="ShippingReciverName">Shippinng Reciver Name</string>
    <string name="phoneoremail">Phone / Email</string>
    <string name="Promocode">Promo code</string>
    <string name="enter_Promo_code">enter Promo code</string>
    <string name="Policy">Policy</string>
    <string name="orderprice">Order Price</string>
    <string name="delete">Delete</string>
    <string name="sure">Sure You Will Cancel The Request ?</string>
    <string name="sureWord">Sure</string>
    <string name="No">No</string>
    <string name="Would">Would You like to make new Request ?</string>
    <string name="enterEmailOrPhone">Enter The Email or  The Phone !</string>
    <string name="ChoosePlace">Choose The Sender Place</string>
    <string name="Newly_shipments">New Shipments</string>
    <string name="Location">Choose The Sender Location On The Map !</string>
    <string name="Location2">Choose The Receiver Location On The Map !</string>
    <string name="messageAnt5a">انتخ .... واحنا نسد</string>
    <string name="flat_number">flat number</string>
    <string name="enterflatNumber">Enter the flat number !</string>
    <string name="Besor3a">بســــــــرعه</string>
    <string name="wewill">سوف يصل اليك اقرب مندوب  بسرعه</string>
    <string name="address">Address</string>
    <string name="getLocationofsender">Location Sender</string>
    <string name="getLocationofreceiver">Reciver Loction</string>
    <string name="SendTheRequest">send the request</string>
    <string name="getLocationofreceiverplz">Get  The Location OF The Reciver</string>
    <string name="UpdateDate">Update Data</string>
    <string name="EnterLocation" translatable="false">Enter the Location to make the request !</string>
    <string name="hello" translatable="false">h e l l o !</string>
    <string name="paragraph" translatable="false">You can use your Fingerprint  to grant access to the app.</string>
    <string name="email" translatable="false">Email address</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">login</string>
    <string name="forgetPassword" translatable="false">Forget password?</string>
    <string name="StillNoAccount" translatable="false">Still without account?</string>
    <string name="CreateAccount" translatable="false">create one</string>
    <string name="signup" translatable="false">S I G N  U P</string>
    <string name="paragraphSignup" translatable="false">Create an account to use Rehana  without limits.for free</string>
    <string name="Fullname" translatable="false">Full Name</string>
    <string name="Repeatpassword" translatable="false">Repeat Password</string>
    <string name="signupbt" translatable="false">Sign up</string>
    <string name="Alreadyhave" translatable="false">I already have an account.</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="surgeries" translatable="false">Surgeries</string>
    <string name="Nonsurgeries" translatable="false">Non-surgical operation</string>
    <string name="processes" translatable="false">Hair and other processes</string>
    <string name="inquiries" translatable="false">inquiries</string>
    <string name="vision" translatable="false">our vision</string>
    <string name="callus" translatable="false">call us</string>
    <string name="first_button" translatable="false">Lip ,Nose And Eyeling Surgery</string>
    <string name="second_button" translatable="false">Injet the face Legs And Buttocks</string>
    <string name="third_button" translatable="false">lighten the skin and sensitive areas of glutamium spanish </string>
    <string name="fourth_button" translatable="false">Lighten the skin and sensetive areas of glutamium spanish </string>
    <string name="fifth_button" translatable="false">botox and filler injectios</string>
    <string name="eighth_button" translatable="false">weight loss ,tensing and laser body sculpting</string>
    <string name="sixth_button" translatable="false">Removal of Excess hair cellulite and laser white lines</string>
    <string name="seventh_button" translatable="false">Enlarging and reducing the size of the chest and tighten the dilution</string>
    <string name="item_servecies" translatable="false">Services</string>
    <string name="item_profile" translatable="false">Profile</string>
    <string name="item_book" translatable="false">Booking</string>
    <string name="item_calculate" translatable="false">Calculate the cost</string>
    <string name="item_reservations" translatable="false">Comfirmed Reservations</string>
    <string name="item_coupon" translatable="false">Coupon</string>
    <string name="item_offers" translatable="false">Offers</string>
    <string name="item_LOGOUT" translatable="false">Log out</string>
    <string name="chooseyourserv" translatable="false">Choose your services</string>
    <string name="eyeleftprocess" translatable="false">Eye Lift Process</string>
    <string name="rhinoplastv" translatable="false">Rhinoplasty</string>
    <string name="theprocessoffateinjection" translatable="false">The Process Of Fat Injection</string>
    <string name="Embellrsktheear" translatable="false">Embellrsk The Ear</string>
    <string name="introduction" translatable="false">Introduction</string>
    <string name="Rate" translatable="false">Rate</string>
    <string name="quit" translatable="false">caution Quit</string>
    <string name="quitQuestion" translatable="false">Do you want to go out ?</string>
    <string name="RateServices" translatable="false">rate services</string>
    <string name="Thanks">Thanks</string>
    <string name="ServicesType" translatable="false">Services Type</string>
    <string name="TimeandDate" translatable="false">Time and Date</string>
</resources>