<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Modify_personal_data"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Modify_personal_data" />
        <item
            android:id="@+id/Previous_shipments"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Previous_shipments" />
        <item
            android:id="@+id/Technical_support"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Technical_support" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sign_out" />
    </group>

</menu>
