<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.mostafa.android.bsor3a.LoginAndRegister.RegisterActivity">
    <RelativeLayout style="@style/pageRelativeStyle"
        android:layout_alignParentTop="true"
        android:id="@+id/head">
        <ImageView
            android:id="@+id/backLogin"
            style="@style/pageTitleIcon"
            android:onClick="back" />

        <TextView
            android:id="@+id/TitleLogin"
            style="@style/pageTitleText"
            android:text="@string/Register" />
    </RelativeLayout>

    <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
        android:layout_below="@id/head">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerInParent="true">
         <ImageView
             android:layout_width="120dp"
             android:layout_height="160dp"
             android:src="@drawable/user"
             android:id="@+id/userImage"
             android:layout_gravity="center"/>
         <EditText
             style="@style/editText"
             android:drawablePadding="20dp"
             android:hint="@string/FullName"
             android:id="@+id/fullname"
             android:drawableLeft="@drawable/person" />
         <EditText
             style="@style/editText"
             android:drawablePadding="20dp"
             android:hint="@string/Phone"
             android:id="@+id/phone"
             android:inputType="number"
             android:maxLength="11"
             android:drawableLeft="@drawable/mob" />
         <EditText
             style="@style/editText"
             android:drawablePadding="20dp"
             android:hint="@string/Email"
             android:textSize="20sp"
             android:id="@+id/email"
             android:drawableLeft="@drawable/mail" />
         <EditText
             style="@style/editText"
             android:drawablePadding="20dp"
             android:hint="@string/ShortName"
             android:id="@+id/shortname"
             android:drawableLeft="@drawable/nname" />
         <EditText
             style="@style/editText"
             android:drawablePadding="20dp"
             android:hint="@string/Password"
             android:id="@+id/password"
             android:inputType="textPassword"
             android:drawableLeft="@drawable/pass" />

         <EditText
             android:id="@+id/EditReStateid"
             style="@style/editText"
             android:drawableLeft="@drawable/select"
             android:drawablePadding="20dp"
             android:hint="@string/Stateid"
             android:inputType="number" />

         <EditText
             android:id="@+id/EditReStreetName"
             style="@style/editText"
             android:drawableLeft="@drawable/select"
             android:drawablePadding="20dp"
             android:hint="@string/streetName"
             android:inputType="text" />

         <EditText
             android:id="@+id/EditRebuilding_number"
             style="@style/editText"
             android:drawableLeft="@drawable/select"
             android:drawablePadding="20dp"
             android:hint="@string/building_number"
             android:inputType="number" />

         <EditText
             android:id="@+id/EditReFlower_number"
             style="@style/editText"
             android:drawableLeft="@drawable/select"
             android:drawablePadding="20dp"
             android:hint="@string/flower_number"
             android:inputType="number" />
         <View
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:background="@color/black"/>
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/AcceptTerms"
             android:id="@+id/CBAccecpt"
             android:layout_gravity="center"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:layout_marginBottom="20dp"
             />

         <Button
             android:id="@+id/Register"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"
             android:background="@drawable/gridentcolor"
             android:text="@string/Register"
             android:layout_marginBottom="10dp"
             android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>

 </ScrollView>

</RelativeLayout>
