<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash"
    tools:context="com.mostafa.android.bsor3a.LoginAndRegister.ModifyTheDataActivity">

    <RelativeLayout
        style="@style/pageRelativeStyle"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/backLogin"
            style="@style/pageTitleIcon"
            android:onClick="back" />

        <TextView
            style="@style/pageTitleText"
            android:text="@string/Modify_personal_data" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                style="@style/editText"
                android:drawablePadding="20dp"
                android:hint="@string/FullName"
                android:drawableLeft="@drawable/person" />

            <EditText
                style="@style/editText"
                android:drawablePadding="20dp"
                android:hint="@string/Phone"
                android:drawableLeft="@drawable/mob" />

            <EditText
                style="@style/editText"
                android:drawablePadding="20dp"
                android:hint="@string/Email"
                android:drawableLeft="@drawable/mail" />

            <EditText
                style="@style/editText"
                android:drawablePadding="20dp"
                android:hint="@string/ShortName"
                android:drawableLeft="@drawable/nname" />

            <EditText
                style="@style/editText"
                android:drawablePadding="20dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/pass" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/thecurrentpassword" />


            </LinearLayout>

            <EditText
                style="@style/editText"
                android:drawablePadding="20dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/pass" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="Signup"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/DonhaveAccount"
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singup"
                    android:textColor="@color/Orange"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/DoYouForget"
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/YourPassword"
                    android:textColor="@color/Orange"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="11dp">

                <Button
                    android:id="@+id/Confirm"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gridentcolor"
                    android:text="@string/Cancel"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/gridentcolor"
                    android:text="@string/Confirm"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
