<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mostafa.android.bsor3a.ShippingDetails">
    <RelativeLayout style="@style/pageRelativeStyle">

        <ImageView
            android:id="@+id/backLogin"
            style="@style/pageTitleIcon"
            android:onClick="back" />

        <TextView
            android:id="@+id/TitleLogin"
            style="@style/pageTitleText"
            android:text="@string/ShippingDetalis" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                style="@style/editText"
                android:hint="@string/ShippingName"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Detailedaddress"
                    android:textAppearance="?android:textAppearanceSmall" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PleaseEnglish"
                    android:textColor="@color/Orange"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:textAppearanceSmall"/>
            </LinearLayout>
            <EditText
                style="@style/editText"
                android:hint="@string/Governorate"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />
            <EditText
                style="@style/editText"
                android:hint="@string/District"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />
            <EditText
                style="@style/editText"
                android:hint="@string/street"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <EditText
                        style="@style/SimpleeditText"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="?android:textAppearanceSmall" />
                    <EditText
                        android:layout_marginBottom="5dp"
                        style="@style/SimpleeditText"
                        android:textAppearance="?android:textAppearanceSmall" />
                    <EditText
                        style="@style/SimpleeditText"
                        android:layout_marginBottom="5dp"

                        android:textAppearance="?android:textAppearanceSmall" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/HouseNumber"
                        android:textColor="@color/Orange"
                        android:layout_marginBottom="5dp"

                        android:textAppearance="?android:textAppearanceSmall"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/Storey"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/Orange"
                        android:textAppearance="?android:textAppearanceSmall"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/Apartmentnumber"
                        android:textColor="@color/Orange"
                        android:textAppearance="?android:textAppearanceSmall"/>
                </LinearLayout>

            </LinearLayout>
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/gridentcolor"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/Confirm"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
